--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: wedding_site_dev
+  username: wedding
+  password: wedding
+  host: localhost
   pool: 5
   timeout: 5000
 
@@ -13,8 +17,11 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: mysql2
+  database: wedding_site_test
+  username: root
+  password: secure
+  host: localhost
   pool: 5
   timeout: 5000
 
